core: in mapping classes, use explicit val for statistics, not case classes; Ontology.scala: do not use Option, it's not useful; Ontology.scala: simplification; Namespace.scala: make name private; server: use better GC, do not open browser, "&all=..." -> "&show=...", correctly count properties in ConditionalMapping, avoid copied code, performance improvements: use val instead of def, use mutable collections